# trajectory-smoothing-ros

./: README.md
trajectory_smoothing/: CMakeLists.txt  package.xml
trajectory_smoothing/include/: smoother.hpp
trajectory_smoothing/launch/: smoothing.launch
trajectory_smoothing/scripts/: functions.py  smoother.py  smoother_node.py  trajectory_smoothing_function.py
trajectory_smoothing/srv/: Smooth.srv
trajectory_smoothing_msg/: CMakeLists.txt  package.xml
trajectory_smoothing_msg/msg/: OpenPoseReceiverHuman.msg  OpenPoseReceiverKeypoint.msg
